Added CSS to Prework Study Guide application.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Study Guide - Index</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    <title>Prework Study Guide - Index</title>
   </head>
 
   <body>
@@ -35,7 +36,11 @@
         <h2>CSS</h2>
 
         <ul>
-          <li>Enter your CSS notes here.</li>
+          <li>Margins indicate the space outside around the outside of an element.</li>
+          <li>Padding indicates the space outside around the content inside of an element.</li>
+          <li>CSS can be created in a seperate .css file to keep code in the HTML files more compact.</li>
+          <li>CSS can be easily linked to a webpage by having the address for the sheet referenced inside of the header in the HTML file.</li>
+          <li>To call the stylesheet use: "rel="stylesheet" href="./file-address"" inside of a link element.</li>
         </ul>
 
 
@@ -71,7 +76,6 @@
     </main>
 
     <footer>
-      <p>I can code!</p>
     </footer>
   </body>
 </html>
