--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       alt="Profile image of cat wearing a bow tie." 
       />
 
+      <h3>✨ Open the Console to See What's Happening ✨</h3>
+
     </header>
 
     <main>
@@ -77,5 +79,9 @@
 
     <footer>
     </footer>
+
+    <script src="./assets/script.js">
+    </script>
+
   </body>
 </html>
